--- a/public/ep2.html
+++ b/public/ep2.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-06-10 Mon 04:30 -->
+<!-- 2024-06-10 Mon 04:36 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -48,17 +48,17 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf07e133">1. Episode 2 - The 1929 Permanent Apportionment Act</a>
+<li><a href="#orgaa7313f">1. Episode 2 - The 1929 Permanent Apportionment Act</a>
 <ul>
-<li><a href="#org0732a5e">1.1. The true size of the House</a></li>
-<li><a href="#orgbbb3103">1.2. Jerry mandering</a></li>
+<li><a href="#org0df9cf3">1.1. The true size of the House</a></li>
+<li><a href="#org3490b9d">1.2. Jerry mandering</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf07e133" class="outline-2">
-<h2 id="orgf07e133"><span class="section-number-2">1.</span> Episode 2 - The 1929 Permanent Apportionment Act</h2>
+<div id="outline-container-orgaa7313f" class="outline-2">
+<h2 id="orgaa7313f"><span class="section-number-2">1.</span> Episode 2 - The 1929 Permanent Apportionment Act</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 On Episode 2 I discuss one of the fundamental changes to the government that altered the checks and balances that we are told about in school.
@@ -101,8 +101,8 @@ In summary, the 1929 Permanent Apportionment Act was a significant legislative m
 </p>
 </div>
 
-<div id="outline-container-org0732a5e" class="outline-3">
-<h3 id="org0732a5e"><span class="section-number-3">1.1.</span> The true size of the House</h3>
+<div id="outline-container-org0df9cf3" class="outline-3">
+<h3 id="org0df9cf3"><span class="section-number-3">1.1.</span> The true size of the House</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Estimating the size of the House of Representatives based on the current U.S. population involves maintaining the same ratio of representatives to citizens as there was when the House size was last adjusted in 1910. At that time, the U.S. population was approximately 92 million, and the House size was set at 435 representatives. This gives a ratio of approximately one representative per 211,000 people.
@@ -127,8 +127,8 @@ Therefore, if the House of Representatives were to be resized today to maintain 
 </div>
 
 
-<div id="outline-container-orgbbb3103" class="outline-3">
-<h3 id="orgbbb3103"><span class="section-number-3">1.2.</span> Jerry mandering</h3>
+<div id="outline-container-org3490b9d" class="outline-3">
+<h3 id="org3490b9d"><span class="section-number-3">1.2.</span> Jerry mandering</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 It is because of the Permanent Apportionment Act that Congress can have an 81% disapproval rating yet can simultaniously have a 90% releection rate.
@@ -151,7 +151,7 @@ It is because of the Permanent Apportionment Act that Congress can have an 81% d
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2024-06-10 Mon 04:30</p>
+<p class="date">Created: 2024-06-10 Mon 04:36</p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 29.3 (<a href="https://orgmode.org">Org</a> mode 9.6.15)</p>
 </div>
 </body>
