--- a/www/public/index.html
+++ b/www/public/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Captain Contrary</title>
-  <meta name="description" content="Your custom description" />
+  <meta name="description" content="An Anarcho Chrisitan navigating the world. Home of the Captain Contrary Show." />
 
   
   <link type="text/css" rel="stylesheet" href="https://captaincontrary.com/css/print.css" media="print">
@@ -35,14 +35,14 @@
     <div class="sidebar-about">
       <a href="https://captaincontrary.com/"><h1>Captain Contrary</h1></a>
       <p class="lead">
-	       Your custom description 
+	       An Anarcho Chrisitan navigating the world. Home of the Captain Contrary Show. 
       </p>
     </div>
 
     <nav>
       <ul class="sidebar-nav">
         <li><a href="https://captaincontrary.com/">Home</a> </li>
-        <li><a href="https://archive.org/details/captain_contrary"> Episode Archive </a></li><li><a href="https://odysee.com/@CaptainContrary:5"> Odysee </a></li>
+        <li><a href="https://archive.org/details/captain_contrary"> Episode Archive </a></li><li><a href="https://odysee.com/@CaptainContrary:5"> Odysee </a></li><li><a href="https://youtube.com/@thecaptaincontraryshow"> YouTube </a></li>
       </ul>
     </nav>
 
