--- a/www/public/links/index.html
+++ b/www/public/links/index.html
@@ -61,7 +61,7 @@
     <nav>
       <ul class="sidebar-nav">
         <li><a href="http://localhost:1313/">Home</a> </li>
-        <li><a href="https://archive.org/details/captain_contrary"> Episode MP3 Archive </a></li><li><a href="https://odysee.com/@CaptainContrary:5"> Odysee </a></li><li><a href="/links/"> The Links </a></li><li><a href="https://youtube.com/@thecaptaincontraryshow"> YouTube </a></li>
+        <li><a href="https://archive.org/details/captain_contrary"> Episode MP3 Archive </a></li><li><a href="https://odysee.com/@CaptainContrary:5"> Odysee </a></li><li><a href="./antichrist.html"> The Antichrist </a></li><li><a href="/links/"> The Links </a></li><li><a href="https://youtube.com/@thecaptaincontraryshow"> YouTube </a></li>
       </ul>
     </nav>
 
