--- a/www/public/q1/index.html
+++ b/www/public/q1/index.html
@@ -86,6 +86,12 @@
 <p><strong>The Question:</strong></p>
 <p>“That every <em><strong>person</strong></em>, as a central component of an <em><strong>individual’s</strong></em> right to liberty and equality, has the fundamental right to reproductive freedom, including but not limited to the ability to make and effectuate decisions to prevent, continue, or end one’s own pregnancy. The State may not, directly or indirectly, deny, burden, or abridge the right unless justified by a compelling state interest achieved by the least restrictive means.”</p>
 <p><strong>NOTE: There are no Maryland laws that prevent ADULTS from seeking and obtaining reproductive interventions.</strong></p>
+<h2 id="resources">RESOURCES</h2>
+<p>It would be helpful if you would grab a meme (right click and chose Save As) and make a post about question 1. Link back to here, or even healthnotharmmd.org. If you make your own memes and want to share, tag me on Twitter @simulacra10 and I will grab it and add it here.</p>
+<p><img src="https://res.cloudinary.com/dafjqauwb/image/upload/v1723763344/question-1/ig-cards/Boy_drinking_smoking_meme_kreffo.png" alt="">
+<img src="https://res.cloudinary.com/dafjqauwb/image/upload/v1723763344/question-1/ig-cards/Girl_drinking_smoking_meme_cm4rwk.png" alt="">
+<img src="https://res.cloudinary.com/dafjqauwb/image/upload/v1723511731/question-1/ig-cards/VOTE_NO_1080x1080_Blue_gcilhv.png" alt="">
+<img src="https://res.cloudinary.com/dafjqauwb/image/upload/v1723511728/question-1/ig-cards/HANDS_OFF_fcamox.png" alt=""></p>
 
 </div>
 
