--- a/www/public/q1/index.html
+++ b/www/public/q1/index.html
@@ -91,7 +91,8 @@
 <p><img src="https://res.cloudinary.com/dafjqauwb/image/upload/v1723763344/question-1/ig-cards/Boy_drinking_smoking_meme_kreffo.png" alt="">
 <img src="https://res.cloudinary.com/dafjqauwb/image/upload/v1723763344/question-1/ig-cards/Girl_drinking_smoking_meme_cm4rwk.png" alt="">
 <img src="https://res.cloudinary.com/dafjqauwb/image/upload/v1723511731/question-1/ig-cards/VOTE_NO_1080x1080_Blue_gcilhv.png" alt="">
-<img src="https://res.cloudinary.com/dafjqauwb/image/upload/v1723511728/question-1/ig-cards/HANDS_OFF_fcamox.png" alt=""></p>
+<img src="https://res.cloudinary.com/dafjqauwb/image/upload/v1723511728/question-1/ig-cards/HANDS_OFF_fcamox.png" alt="">
+<img src="https://res.cloudinary.com/dafjqauwb/image/upload/v1723765420/question-1/ig-cards/Qurstion_1_hzgwib.png" alt=""></p>
 
 </div>
 
